--- a/docs/ch08.org
+++ b/docs/ch08.org
@@ -52,12 +52,74 @@
      - Don't use too many
      - Keep parameter lists small (4 or fewer) and avoid params of the same type.
      - Use interfaces for parameter types. It allows more flexibility for the callers.
-     - Don't use boolean parameters. Use enums instead. (Is there ***ever*** a reason to use
+     - Don't use boolean parameters. Use enums instead. (Is there *ever* a reason to use
        boolean parameters?)
-**  TODO Item 52: Use overloading judiciously
+** DONE Item 52: Use overloading judiciously
+   CLOSED: [2018-11-13 Tue 22:21]
    * Selection among overloaded methods is static, selection among overridden methods is
      dynamic.
-   * There's a lot I don't understand in here. Need to reread more carefully.
+   * Avoid overloadings with the same parameter counts.
+   * When in doubt about overloading, just give the methods different names.
+   * This autoboxing thing deserves a closer look:
+
+     #+HEADERS: :classname SetList
+     #+BEGIN_SRC java :tangle ../src/main/java/ch08/SetList.java :results output :exports results
+       import java.util.Set;
+       import java.util.List;
+       import java.util.TreeSet;
+       import java.util.ArrayList;
+
+       public class SetList {
+           public static void main(String[] args) {
+               Set<Integer> set = new TreeSet<>();
+               List<Integer> list = new ArrayList<>();
+               List<Integer> list2 = new ArrayList<>();
+
+               for(int i = -3; i < 3; i++) {
+                   set.add(i);
+                   list.add(i);
+                   list2.add(i);
+               }
+               System.out.println("Before:");
+               System.out.println("\tSet: " + set);
+               System.out.println("\tList: " + list);
+               System.out.println("\tList2: " + list2);
+
+               for(int i = 0; i < 3; i++) {
+                   set.remove(i);
+                   list.remove(i);
+                   list2.remove((Integer) i);
+               }
+               System.out.println("After:");
+               System.out.println("\tSet: " + set);
+               System.out.println("\tList: " + list);
+               System.out.println("\tList2: " + list2);
+           }
+       }
+     #+END_SRC
+
+     #+RESULTS:
+     : Before:
+     : 	Set: [-3, -2, -1, 0, 1, 2]
+     : 	List: [-3, -2, -1, 0, 1, 2]
+     : 	List2: [-3, -2, -1, 0, 1, 2]
+     : After:
+     : 	Set: [-3, -2, -1]
+     : 	List: [-2, 0, 2]
+     : 	List2: [-3, -2, -1]
+
+     Wha??? It turns out the =set.remove()= removes each =Integer= while =list.remove()= method
+     removes position =int=. The zeroth element (=-3=), then the element at position 1 which
+     is now =-1= and finally the element at position 2 which becomes =1=.
+
+     The =List= interface has two overridden =remove()= methods, =remove(Object)= and
+     =remove(int)=. Bottom line: The =List= interface is broken with respect to autoboxing.
+
+   * Don't overload methods to take different functional interfaces in the same
+     position (=Runnable= vs. =Callable<T>= for example).
+
+   * The rules that govern which overloaded method gets called get very complex.
+
 **  Item 53: Use varargs judiciously
    * Varargs allocate an array for every invocation. If you know that most of the time you
      won't need more than a few params consider an overridden set of methods
